--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "autoprefixer-stylus": "^0.14.0",
+    "dotenv": "^6.2.0",
     "firebase": "^5.7.0",
     "firebaseui": "^3.5.1",
     "pretty-ms": "^4.0.0",
